# battery_mqtt

./: .env-example  README.md  add_task.bat  battery_mqtt.py  include.txt  output.txt  pyproject.toml  requirements.txt  run.bat  setup.bat  setup_autostart.bat
