[project]
name = "battery-mqtt"
version = "0.1.0"
description = "Publish Windows 11 laptop battery percentage to MQTT"
authors = [{ name = "Hudrolax", email = "hudro795@gmail.com" }]
dependencies = [
    "asyncio-mqtt>=0.17.0",
    "python-dotenv>=1.0.1",
    "psutil>=5.9.8"
]

[project.scripts]
battery-mqtt = "battery_mqtt:publish_battery"
